--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
     <section class="video">
         <h3 class="title">Мырза-Аке в наших руках</h3>
         <div class="video__div">
-            <iframe class="div" src="https://www.youtube.com/embed/Z3rrd_Ddq3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="div" src="https://www.youtube.com/embed/3d0ftEppjn0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
         </div>
     </section>
 
