--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <p class="website__rights">Создание сайта-Ойгонуу</p>
                 </div>
                 <div class="social__icons">
-                    <a href="https://www.instagram.com/nurdoolotabdullaev____/?hl=ru" class="social__icon--link">
+                    <a href="https://www.instagram.com/oigonuu/?hl=ru" class="social__icon--link">
                         <i class="fab fa-instagram" aria-hidden="true"></i>
                     </a><span>Инстаграм</span>
                 </div>
