--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logo.jpg">
     <meta name="google-site-verification" content="f5YqHOoGMg4ECmS-8koeGcovZe9hU79e1sGeSB7JH4w" />
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Мырза-аке -село на юге Кыргызской республики Узгенского района Ошской области">
 </head>
 <body>
 
