--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="img/logo.jpg">
     <meta name="google-site-verification" content="f5YqHOoGMg4ECmS-8koeGcovZe9hU79e1sGeSB7JH4w" />
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Мырза-аке -село на юге Кыргызской республики Узгенского района Ошской области">
+    <meta name="description" content="Народная легенда о Мырза-Аке">
+    <meta name="keywords" content="Народная легенда о Мырза-Аке, Создание сайта-Ойгонуу, Мырза-Аке в наших руках, Село Мырза-Аке, Нурдоолот, Мырза-аке" />
 </head>
 <body>
 
